# ZeroMQ-Based-Chat-System

./: CMakeLists.txt
client/: client.cpp  message.hpp  receiver_thread.hpp  ui.hpp
common/: utils.hpp
server/: group_manager.hpp  message.hpp  server.cpp
